# aicfg

./: pyproject.toml
src/aicfg/cli/: __init__.py  sessions.py  skills.py
src/aicfg/mcp/: server.py
src/aicfg/sdk/: config.py  sessions.py  skills.py
tests/: test_skills.py
to-integrate/: skill-stats.py
